# switchboard

./: Cargo.toml  LICENSE  README.md
bots/token-watcher/: Cargo.toml  README.md
bots/token-watcher/src/: daemon.rs  main.rs
bots/token-watcher/tests/: cli.rs
src/: cli.rs  cmd.rs  io.rs  lib.rs  main.rs  paths.rs  record.rs  stream.rs  switchboard
src/cmd/: channels.rs  clean.rs  hold.rs  leave.rs  log.rs  mark_read.rs  peers.rs  prune.rs  recv.rs  resume.rs  send.rs  status.rs  stream.rs
tests/: cli.rs
