[package]
name = "switchboard"
version = "0.3.1"
edition = "2024"
description = "File-based pub/sub for multi-Claude-session coordination"

[lib]
path = "src/lib.rs"

[[bin]]
name = "switchboard"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", default-features = false, features = ["clock", "serde"] }
dirs = "6"
anyhow = "1"
atty = "0.2"

[dev-dependencies]
tempfile = "3"
assert_cmd = "2"
predicates = "3"

[profile.release]
lto = "thin"
strip = true
