[package]
name = "switchboard-token-watcher"
version = "0.1.0"
edition = "2024"
description = "Switchboard bot: warn participants approaching their model's context-window limit"

[[bin]]
name = "switchboard-token-watcher"
path = "src/main.rs"

[dependencies]
switchboard = { path = "../.." }
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", default-features = false, features = ["clock", "serde"] }
anyhow = "1"
dirs = "6"

[dev-dependencies]
tempfile = "3"
assert_cmd = "2"
